syntax = "proto3";

package proto;

option go_package = "gocore/pkg/proto;proto";

service CoreService {
    rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {
    string payload = 1;
}

message PingResponse {
    string reply = 1;
}

service CpuHeavyService {
    rpc ExecuteHeavyCalculation (HeavyCalculationRequest) returns (HeavyCalculationResponse);
}

message HeavyCalculationRequest {
    int32 complexity_level = 1;
}

message HeavyCalculationResponse {
    bool success = 1;
    int64 result_checksum = 2;
}